--- a/.travis.yml
+++ b/.travis.yml
@@ -1,30 +1,26 @@
 # Runs Bazel tests for DeepMind Lab
 
+os: osx
+
+sudo: true
+
 language: c++
 
-dist: xenial
+osx_image: xcode9.3
 
 jdk:
   - oraclejdk8
 
 addons:
-  apt:
-    sources:
-      - sourceline: 'deb [arch=amd64] http://storage.googleapis.com/bazel-apt stable jdk1.8'
-        key_url: 'https://bazel.build/bazel-release.pub.gpg'
-    packages:
-      - bazel
-      - libffi-dev
-      - gettext
-      - freeglut3-dev
-      - libsdl2-dev
-      - libosmesa6-dev
-      - python-dev
-      - python-numpy
-      - python-pil
-      - python3-dev
-      - python3-numpy
-      - python3-pil
+  homebrew:
+    taps:
+      - bazelbuild/tap
+
+before_install:
+  - brew install bazel glib sdl2 python python@2
+  - sudo pip install numpy
+  - sudo pip3 install numpy
 
 script:
-  - bazel test -c opt --copt=-Wno-maybe-uninitialized --copt=-Wno-sign-compare --show_progress_rate_limit=300 --test_output=errors //...
+  - find -L /usr/local/Cellar -type f -name Python.h -o -name arrayobject.h -o -name SDL.h -o -name glib.h
+  - bazel build -c opt --copt=-Wno-sign-compare --show_progress_rate_limit=10 //:game
